--- a/src/themes/dark/components/device-nav.css
+++ b/src/themes/dark/components/device-nav.css
@@ -1,5 +1,5 @@
 .device-nav {
-  @apply grid grid-flow-row grid-cols-3 gap-y-0 pb-6 pt-2 capitalize;
+  @apply grid grid-flow-row grid-cols-2 gap-y-0 pb-6 pt-2 capitalize;
 }
 
 .device-nav .item {
@@ -70,16 +70,15 @@
 
 @screen md {
   .device-nav {
+    @apply grid-cols-4;
+  }
+}
+
+@screen lg {
+  .device-nav {
     @apply grid-cols-none pb-0 flex items-stretch mx-auto text-center justify-center;
   }
   .device-nav .label {
     @apply block w-full pt-2;
   }
-}
-@screen lg {
-  .device-nav {
-    @apply text-center;
-  }
-}
-@screen xl {
 }
